better buffer implementation