@@ -5,7 +5,6 @@ plugins {
 }
 
 description = "clang-c bindings for jpgen"
-version = "0.2.0"
 
 configureDeployment(project)
 
@@ -14,9 +13,5 @@ dependencies {
 }
 
 tasks.withType<JavaExec>().configureEach {
-    jvmArgs(
-        "--enable-native-access=ALL-UNNAMED"
-    )
-
     environment("LIBCLANG_DISABLE_CRASH_RECOVERY" to 1)
 }
